// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webhooks C# snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "empty-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 83,
      "start": 45,
    },
    "verification": Object {
      "end": 43,
      "start": 40,
    },
  },
  "variables": Object {
    "security": Object {
      "apiKey": Object {
        "line": 103,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "empty-default-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 83,
      "start": 45,
    },
    "verification": Object {
      "end": 43,
      "start": 40,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 106,
      },
    },
    "server": Object {
      "name": Object {
        "line": 103,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "quirky-escaping-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 83,
      "start": 45,
    },
    "verification": Object {
      "end": 43,
      "start": 40,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 109,
      },
      "basic-auth": Object {
        "line": 110,
      },
      "normal_security_var": Object {
        "line": 111,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 104,
      },
      "2name": Object {
        "line": 103,
      },
      "normal_server_var": Object {
        "line": 106,
      },
      "p*o?r*t": Object {
        "line": 105,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "security-and-server-variables-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 83,
      "start": 45,
    },
    "verification": Object {
      "end": 43,
      "start": 40,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 108,
      },
      "petstore_auth": Object {
        "line": 107,
      },
    },
    "server": Object {
      "name": Object {
        "line": 103,
      },
      "port": Object {
        "line": 104,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "security-types-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 83,
      "start": 45,
    },
    "verification": Object {
      "end": 43,
      "start": 40,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 103,
      },
      "http_basic": Object {
        "line": 104,
      },
      "http_bearer": Object {
        "line": 105,
      },
      "oauth2": Object {
        "line": 106,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "security-variables-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 83,
      "start": 45,
    },
    "verification": Object {
      "end": 43,
      "start": 40,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 104,
      },
      "petstore_auth": Object {
        "line": 103,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "server-variables-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 83,
      "start": 45,
    },
    "verification": Object {
      "end": 43,
      "start": 40,
    },
  },
  "variables": Object {
    "security": Object {
      "apiKey": Object {
        "line": 107,
      },
    },
    "server": Object {
      "name": Object {
        "line": 103,
      },
      "port": Object {
        "line": 104,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation aws request should match fixture for "empty" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 62,
      "start": 42,
    },
    "verification": Object {
      "end": 40,
      "start": 37,
    },
  },
  "variables": Object {
    "security": Object {
      "apiKey": Object {
        "line": 82,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation aws request should match fixture for "empty-default" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 62,
      "start": 42,
    },
    "verification": Object {
      "end": 40,
      "start": 37,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 85,
      },
    },
    "server": Object {
      "name": Object {
        "line": 82,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation aws request should match fixture for "quirky-escaping" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 62,
      "start": 42,
    },
    "verification": Object {
      "end": 40,
      "start": 37,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 88,
      },
      "basic-auth": Object {
        "line": 89,
      },
      "normal_security_var": Object {
        "line": 90,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 83,
      },
      "2name": Object {
        "line": 82,
      },
      "normal_server_var": Object {
        "line": 85,
      },
      "p*o?r*t": Object {
        "line": 84,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation aws request should match fixture for "security-and-server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 62,
      "start": 42,
    },
    "verification": Object {
      "end": 40,
      "start": 37,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 87,
      },
      "petstore_auth": Object {
        "line": 86,
      },
    },
    "server": Object {
      "name": Object {
        "line": 82,
      },
      "port": Object {
        "line": 83,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation aws request should match fixture for "security-types" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 62,
      "start": 42,
    },
    "verification": Object {
      "end": 40,
      "start": 37,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 82,
      },
      "http_basic": Object {
        "line": 83,
      },
      "http_bearer": Object {
        "line": 84,
      },
      "oauth2": Object {
        "line": 85,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation aws request should match fixture for "security-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 62,
      "start": 42,
    },
    "verification": Object {
      "end": 40,
      "start": 37,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 83,
      },
      "petstore_auth": Object {
        "line": 82,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation aws request should match fixture for "server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 62,
      "start": 42,
    },
    "verification": Object {
      "end": 40,
      "start": 37,
    },
  },
  "variables": Object {
    "security": Object {
      "apiKey": Object {
        "line": 86,
      },
    },
    "server": Object {
      "name": Object {
        "line": 82,
      },
      "port": Object {
        "line": 83,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation dotnet6 request should match fixture for "empty" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 33,
      "start": 27,
    },
    "verification": Object {
      "end": 25,
      "start": 9,
    },
  },
  "variables": Object {},
}
`;

exports[`webhooks C# snippet generation dotnet6 request should match fixture for "empty-default" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 37,
      "start": 27,
    },
    "verification": Object {
      "end": 25,
      "start": 9,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 36,
      },
    },
    "server": Object {
      "name": Object {
        "line": 33,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation dotnet6 request should match fixture for "quirky-escaping" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 42,
      "start": 27,
    },
    "verification": Object {
      "end": 25,
      "start": 9,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 39,
      },
      "basic-auth": Object {
        "line": 40,
      },
      "normal_security_var": Object {
        "line": 41,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 34,
      },
      "2name": Object {
        "line": 33,
      },
      "normal_server_var": Object {
        "line": 36,
      },
      "p*o?r*t": Object {
        "line": 35,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation dotnet6 request should match fixture for "security-and-server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 39,
      "start": 27,
    },
    "verification": Object {
      "end": 25,
      "start": 9,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 38,
      },
      "petstore_auth": Object {
        "line": 37,
      },
    },
    "server": Object {
      "name": Object {
        "line": 33,
      },
      "port": Object {
        "line": 34,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation dotnet6 request should match fixture for "security-types" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 37,
      "start": 27,
    },
    "verification": Object {
      "end": 25,
      "start": 9,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 33,
      },
      "http_basic": Object {
        "line": 34,
      },
      "http_bearer": Object {
        "line": 35,
      },
      "oauth2": Object {
        "line": 36,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation dotnet6 request should match fixture for "security-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 35,
      "start": 27,
    },
    "verification": Object {
      "end": 25,
      "start": 9,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 34,
      },
      "petstore_auth": Object {
        "line": 33,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation dotnet6 request should match fixture for "server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 35,
      "start": 27,
    },
    "verification": Object {
      "end": 25,
      "start": 9,
    },
  },
  "variables": Object {
    "server": Object {
      "name": Object {
        "line": 33,
      },
      "port": Object {
        "line": 34,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "empty-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 55,
      "start": 24,
    },
    "verification": Object {
      "end": 22,
      "start": 19,
    },
  },
  "variables": Object {
    "security": Object {
      "apiKey": Object {
        "line": 66,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "empty-default-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 55,
      "start": 24,
    },
    "verification": Object {
      "end": 22,
      "start": 19,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 69,
      },
    },
    "server": Object {
      "name": Object {
        "line": 66,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "quirky-escaping-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 55,
      "start": 24,
    },
    "verification": Object {
      "end": 22,
      "start": 19,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 72,
      },
      "basic-auth": Object {
        "line": 73,
      },
      "normal_security_var": Object {
        "line": 74,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 67,
      },
      "2name": Object {
        "line": 66,
      },
      "normal_server_var": Object {
        "line": 69,
      },
      "p*o?r*t": Object {
        "line": 68,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "security-and-server-variables-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 55,
      "start": 24,
    },
    "verification": Object {
      "end": 22,
      "start": 19,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 71,
      },
      "petstore_auth": Object {
        "line": 70,
      },
    },
    "server": Object {
      "name": Object {
        "line": 66,
      },
      "port": Object {
        "line": 67,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "security-types-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 55,
      "start": 24,
    },
    "verification": Object {
      "end": 22,
      "start": 19,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 66,
      },
      "http_basic": Object {
        "line": 67,
      },
      "http_bearer": Object {
        "line": 68,
      },
      "oauth2": Object {
        "line": 69,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "security-variables-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 55,
      "start": 24,
    },
    "verification": Object {
      "end": 22,
      "start": 19,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 67,
      },
      "petstore_auth": Object {
        "line": 66,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "server-variables-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 55,
      "start": 24,
    },
    "verification": Object {
      "end": 22,
      "start": 19,
    },
  },
  "variables": Object {
    "security": Object {
      "apiKey": Object {
        "line": 70,
      },
    },
    "server": Object {
      "name": Object {
        "line": 66,
      },
      "port": Object {
        "line": 67,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation aws request should match fixture for "empty" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 28,
      "start": 16,
    },
    "verification": Object {
      "end": 14,
      "start": 11,
    },
  },
  "variables": Object {
    "security": Object {
      "apiKey": Object {
        "line": 39,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation aws request should match fixture for "empty-default" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 28,
      "start": 16,
    },
    "verification": Object {
      "end": 14,
      "start": 11,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 42,
      },
    },
    "server": Object {
      "name": Object {
        "line": 39,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation aws request should match fixture for "quirky-escaping" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 28,
      "start": 16,
    },
    "verification": Object {
      "end": 14,
      "start": 11,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 45,
      },
      "basic-auth": Object {
        "line": 46,
      },
      "normal_security_var": Object {
        "line": 47,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 40,
      },
      "2name": Object {
        "line": 39,
      },
      "normal_server_var": Object {
        "line": 42,
      },
      "p*o?r*t": Object {
        "line": 41,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation aws request should match fixture for "security-and-server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 28,
      "start": 16,
    },
    "verification": Object {
      "end": 14,
      "start": 11,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 44,
      },
      "petstore_auth": Object {
        "line": 43,
      },
    },
    "server": Object {
      "name": Object {
        "line": 39,
      },
      "port": Object {
        "line": 40,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation aws request should match fixture for "security-types" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 28,
      "start": 16,
    },
    "verification": Object {
      "end": 14,
      "start": 11,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 39,
      },
      "http_basic": Object {
        "line": 40,
      },
      "http_bearer": Object {
        "line": 41,
      },
      "oauth2": Object {
        "line": 42,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation aws request should match fixture for "security-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 28,
      "start": 16,
    },
    "verification": Object {
      "end": 14,
      "start": 11,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 40,
      },
      "petstore_auth": Object {
        "line": 39,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation aws request should match fixture for "server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 28,
      "start": 16,
    },
    "verification": Object {
      "end": 14,
      "start": 11,
    },
  },
  "variables": Object {
    "security": Object {
      "apiKey": Object {
        "line": 43,
      },
    },
    "server": Object {
      "name": Object {
        "line": 39,
      },
      "port": Object {
        "line": 40,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation express request should match fixture for "empty" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 24,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 10,
    },
  },
  "variables": Object {},
}
`;

exports[`webhooks Node.js snippet generation express request should match fixture for "empty-default" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 28,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 10,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 27,
      },
    },
    "server": Object {
      "name": Object {
        "line": 24,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation express request should match fixture for "quirky-escaping" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 33,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 10,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 30,
      },
      "basic-auth": Object {
        "line": 31,
      },
      "normal_security_var": Object {
        "line": 32,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 25,
      },
      "2name": Object {
        "line": 24,
      },
      "normal_server_var": Object {
        "line": 27,
      },
      "p*o?r*t": Object {
        "line": 26,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation express request should match fixture for "security-and-server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 30,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 10,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 29,
      },
      "petstore_auth": Object {
        "line": 28,
      },
    },
    "server": Object {
      "name": Object {
        "line": 24,
      },
      "port": Object {
        "line": 25,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation express request should match fixture for "security-types" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 28,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 10,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 24,
      },
      "http_basic": Object {
        "line": 25,
      },
      "http_bearer": Object {
        "line": 26,
      },
      "oauth2": Object {
        "line": 27,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation express request should match fixture for "security-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 26,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 10,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 25,
      },
      "petstore_auth": Object {
        "line": 24,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation express request should match fixture for "server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 26,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 10,
    },
  },
  "variables": Object {
    "server": Object {
      "name": Object {
        "line": 24,
      },
      "port": Object {
        "line": 25,
      },
    },
  },
}
`;

exports[`webhooks PHP snippet generation laravel request should match fixture for "empty" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 24,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 8,
    },
  },
  "variables": Object {},
}
`;

exports[`webhooks PHP snippet generation laravel request should match fixture for "empty-default" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 28,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 8,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 27,
      },
    },
    "server": Object {
      "name": Object {
        "line": 24,
      },
    },
  },
}
`;

exports[`webhooks PHP snippet generation laravel request should match fixture for "quirky-escaping" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 33,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 8,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 30,
      },
      "basic-auth": Object {
        "line": 31,
      },
      "normal_security_var": Object {
        "line": 32,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 25,
      },
      "2name": Object {
        "line": 24,
      },
      "normal_server_var": Object {
        "line": 27,
      },
      "p*o?r*t": Object {
        "line": 26,
      },
    },
  },
}
`;

exports[`webhooks PHP snippet generation laravel request should match fixture for "security-and-server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 30,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 8,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 29,
      },
      "petstore_auth": Object {
        "line": 28,
      },
    },
    "server": Object {
      "name": Object {
        "line": 24,
      },
      "port": Object {
        "line": 25,
      },
    },
  },
}
`;

exports[`webhooks PHP snippet generation laravel request should match fixture for "security-types" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 28,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 8,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 24,
      },
      "http_basic": Object {
        "line": 25,
      },
      "http_bearer": Object {
        "line": 26,
      },
      "oauth2": Object {
        "line": 27,
      },
    },
  },
}
`;

exports[`webhooks PHP snippet generation laravel request should match fixture for "security-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 26,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 8,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 25,
      },
      "petstore_auth": Object {
        "line": 24,
      },
    },
  },
}
`;

exports[`webhooks PHP snippet generation laravel request should match fixture for "server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 26,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 8,
    },
  },
  "variables": Object {
    "server": Object {
      "name": Object {
        "line": 24,
      },
      "port": Object {
        "line": 25,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "empty-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 47,
      "start": 25,
    },
    "verification": Object {
      "end": 23,
      "start": 20,
    },
  },
  "variables": Object {
    "security": Object {
      "apiKey": Object {
        "line": 58,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "empty-default-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 47,
      "start": 25,
    },
    "verification": Object {
      "end": 23,
      "start": 20,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 61,
      },
    },
    "server": Object {
      "name": Object {
        "line": 58,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "quirky-escaping-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 47,
      "start": 25,
    },
    "verification": Object {
      "end": 23,
      "start": 20,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 64,
      },
      "basic-auth": Object {
        "line": 65,
      },
      "normal_security_var": Object {
        "line": 66,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 59,
      },
      "2name": Object {
        "line": 58,
      },
      "normal_server_var": Object {
        "line": 61,
      },
      "p*o?r*t": Object {
        "line": 60,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "security-and-server-variables-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 47,
      "start": 25,
    },
    "verification": Object {
      "end": 23,
      "start": 20,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 63,
      },
      "petstore_auth": Object {
        "line": 62,
      },
    },
    "server": Object {
      "name": Object {
        "line": 58,
      },
      "port": Object {
        "line": 59,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "security-types-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 47,
      "start": 25,
    },
    "verification": Object {
      "end": 23,
      "start": 20,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 58,
      },
      "http_basic": Object {
        "line": 59,
      },
      "http_bearer": Object {
        "line": 60,
      },
      "oauth2": Object {
        "line": 61,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "security-variables-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 47,
      "start": 25,
    },
    "verification": Object {
      "end": 23,
      "start": 20,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 59,
      },
      "petstore_auth": Object {
        "line": 58,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "server-variables-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 47,
      "start": 25,
    },
    "verification": Object {
      "end": 23,
      "start": 20,
    },
  },
  "variables": Object {
    "security": Object {
      "apiKey": Object {
        "line": 62,
      },
    },
    "server": Object {
      "name": Object {
        "line": 58,
      },
      "port": Object {
        "line": 59,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation aws request should match fixture for "empty" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 32,
      "start": 22,
    },
    "verification": Object {
      "end": 20,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "apiKey": Object {
        "line": 43,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation aws request should match fixture for "empty-default" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 32,
      "start": 22,
    },
    "verification": Object {
      "end": 20,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 46,
      },
    },
    "server": Object {
      "name": Object {
        "line": 43,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation aws request should match fixture for "quirky-escaping" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 32,
      "start": 22,
    },
    "verification": Object {
      "end": 20,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 49,
      },
      "basic-auth": Object {
        "line": 50,
      },
      "normal_security_var": Object {
        "line": 51,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 44,
      },
      "2name": Object {
        "line": 43,
      },
      "normal_server_var": Object {
        "line": 46,
      },
      "p*o?r*t": Object {
        "line": 45,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation aws request should match fixture for "security-and-server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 32,
      "start": 22,
    },
    "verification": Object {
      "end": 20,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 48,
      },
      "petstore_auth": Object {
        "line": 47,
      },
    },
    "server": Object {
      "name": Object {
        "line": 43,
      },
      "port": Object {
        "line": 44,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation aws request should match fixture for "security-types" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 32,
      "start": 22,
    },
    "verification": Object {
      "end": 20,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 43,
      },
      "http_basic": Object {
        "line": 44,
      },
      "http_bearer": Object {
        "line": 45,
      },
      "oauth2": Object {
        "line": 46,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation aws request should match fixture for "security-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 32,
      "start": 22,
    },
    "verification": Object {
      "end": 20,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 44,
      },
      "petstore_auth": Object {
        "line": 43,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation aws request should match fixture for "server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 32,
      "start": 22,
    },
    "verification": Object {
      "end": 20,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "apiKey": Object {
        "line": 47,
      },
    },
    "server": Object {
      "name": Object {
        "line": 43,
      },
      "port": Object {
        "line": 44,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation flask request should match fixture for "empty" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 39,
      "start": 31,
    },
    "verification": Object {
      "end": 29,
      "start": 19,
    },
  },
  "variables": Object {},
}
`;

exports[`webhooks Python snippet generation flask request should match fixture for "empty-default" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 43,
      "start": 31,
    },
    "verification": Object {
      "end": 29,
      "start": 19,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 39,
      },
    },
    "server": Object {
      "name": Object {
        "line": 36,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation flask request should match fixture for "quirky-escaping" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 48,
      "start": 31,
    },
    "verification": Object {
      "end": 29,
      "start": 19,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 42,
      },
      "basic-auth": Object {
        "line": 43,
      },
      "normal_security_var": Object {
        "line": 44,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 37,
      },
      "2name": Object {
        "line": 36,
      },
      "normal_server_var": Object {
        "line": 39,
      },
      "p*o?r*t": Object {
        "line": 38,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation flask request should match fixture for "security-and-server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 45,
      "start": 31,
    },
    "verification": Object {
      "end": 29,
      "start": 19,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 41,
      },
      "petstore_auth": Object {
        "line": 40,
      },
    },
    "server": Object {
      "name": Object {
        "line": 36,
      },
      "port": Object {
        "line": 37,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation flask request should match fixture for "security-types" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 43,
      "start": 31,
    },
    "verification": Object {
      "end": 29,
      "start": 19,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 36,
      },
      "http_basic": Object {
        "line": 37,
      },
      "http_bearer": Object {
        "line": 38,
      },
      "oauth2": Object {
        "line": 39,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation flask request should match fixture for "security-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 41,
      "start": 31,
    },
    "verification": Object {
      "end": 29,
      "start": 19,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 37,
      },
      "petstore_auth": Object {
        "line": 36,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation flask request should match fixture for "server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 41,
      "start": 31,
    },
    "verification": Object {
      "end": 29,
      "start": 19,
    },
  },
  "variables": Object {
    "server": Object {
      "name": Object {
        "line": 36,
      },
      "port": Object {
        "line": 37,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "empty-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 50,
      "start": 21,
    },
    "verification": Object {
      "end": 19,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "apiKey": Object {
        "line": 62,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "empty-default-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 50,
      "start": 21,
    },
    "verification": Object {
      "end": 19,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 65,
      },
    },
    "server": Object {
      "name": Object {
        "line": 62,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "quirky-escaping-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 50,
      "start": 21,
    },
    "verification": Object {
      "end": 19,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 68,
      },
      "basic-auth": Object {
        "line": 69,
      },
      "normal_security_var": Object {
        "line": 70,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 63,
      },
      "2name": Object {
        "line": 62,
      },
      "normal_server_var": Object {
        "line": 65,
      },
      "p*o?r*t": Object {
        "line": 64,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "security-and-server-variables-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 50,
      "start": 21,
    },
    "verification": Object {
      "end": 19,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 67,
      },
      "petstore_auth": Object {
        "line": 66,
      },
    },
    "server": Object {
      "name": Object {
        "line": 62,
      },
      "port": Object {
        "line": 63,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "security-types-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 50,
      "start": 21,
    },
    "verification": Object {
      "end": 19,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 62,
      },
      "http_basic": Object {
        "line": 63,
      },
      "http_bearer": Object {
        "line": 64,
      },
      "oauth2": Object {
        "line": 65,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "security-variables-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 50,
      "start": 21,
    },
    "verification": Object {
      "end": 19,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 63,
      },
      "petstore_auth": Object {
        "line": 62,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation aws AWS snippet generation with automatic creation of new API keys aws request should match fixture for "server-variables-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 50,
      "start": 21,
    },
    "verification": Object {
      "end": 19,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "apiKey": Object {
        "line": 66,
      },
    },
    "server": Object {
      "name": Object {
        "line": 62,
      },
      "port": Object {
        "line": 63,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation aws request should match fixture for "empty" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 33,
      "start": 18,
    },
    "verification": Object {
      "end": 16,
      "start": 14,
    },
  },
  "variables": Object {
    "security": Object {
      "apiKey": Object {
        "line": 45,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation aws request should match fixture for "empty-default" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 33,
      "start": 18,
    },
    "verification": Object {
      "end": 16,
      "start": 14,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 48,
      },
    },
    "server": Object {
      "name": Object {
        "line": 45,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation aws request should match fixture for "quirky-escaping" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 33,
      "start": 18,
    },
    "verification": Object {
      "end": 16,
      "start": 14,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 51,
      },
      "basic-auth": Object {
        "line": 52,
      },
      "normal_security_var": Object {
        "line": 53,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 46,
      },
      "2name": Object {
        "line": 45,
      },
      "normal_server_var": Object {
        "line": 48,
      },
      "p*o?r*t": Object {
        "line": 47,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation aws request should match fixture for "security-and-server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 33,
      "start": 18,
    },
    "verification": Object {
      "end": 16,
      "start": 14,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 50,
      },
      "petstore_auth": Object {
        "line": 49,
      },
    },
    "server": Object {
      "name": Object {
        "line": 45,
      },
      "port": Object {
        "line": 46,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation aws request should match fixture for "security-types" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 33,
      "start": 18,
    },
    "verification": Object {
      "end": 16,
      "start": 14,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 45,
      },
      "http_basic": Object {
        "line": 46,
      },
      "http_bearer": Object {
        "line": 47,
      },
      "oauth2": Object {
        "line": 48,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation aws request should match fixture for "security-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 33,
      "start": 18,
    },
    "verification": Object {
      "end": 16,
      "start": 14,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 46,
      },
      "petstore_auth": Object {
        "line": 45,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation aws request should match fixture for "server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 33,
      "start": 18,
    },
    "verification": Object {
      "end": 16,
      "start": 14,
    },
  },
  "variables": Object {
    "security": Object {
      "apiKey": Object {
        "line": 49,
      },
    },
    "server": Object {
      "name": Object {
        "line": 45,
      },
      "port": Object {
        "line": 46,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation rails request should match fixture for "empty" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 30,
      "start": 26,
    },
    "verification": Object {
      "end": 24,
      "start": 13,
    },
  },
  "variables": Object {},
}
`;

exports[`webhooks Ruby snippet generation rails request should match fixture for "empty-default" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 34,
      "start": 26,
    },
    "verification": Object {
      "end": 24,
      "start": 13,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 33,
      },
    },
    "server": Object {
      "name": Object {
        "line": 30,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation rails request should match fixture for "quirky-escaping" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 39,
      "start": 26,
    },
    "verification": Object {
      "end": 24,
      "start": 13,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 36,
      },
      "basic-auth": Object {
        "line": 37,
      },
      "normal_security_var": Object {
        "line": 38,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 31,
      },
      "2name": Object {
        "line": 30,
      },
      "normal_server_var": Object {
        "line": 33,
      },
      "p*o?r*t": Object {
        "line": 32,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation rails request should match fixture for "security-and-server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 36,
      "start": 26,
    },
    "verification": Object {
      "end": 24,
      "start": 13,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 35,
      },
      "petstore_auth": Object {
        "line": 34,
      },
    },
    "server": Object {
      "name": Object {
        "line": 30,
      },
      "port": Object {
        "line": 31,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation rails request should match fixture for "security-types" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 34,
      "start": 26,
    },
    "verification": Object {
      "end": 24,
      "start": 13,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 30,
      },
      "http_basic": Object {
        "line": 31,
      },
      "http_bearer": Object {
        "line": 32,
      },
      "oauth2": Object {
        "line": 33,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation rails request should match fixture for "security-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 32,
      "start": 26,
    },
    "verification": Object {
      "end": 24,
      "start": 13,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 31,
      },
      "petstore_auth": Object {
        "line": 30,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation rails request should match fixture for "server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 32,
      "start": 26,
    },
    "verification": Object {
      "end": 24,
      "start": 13,
    },
  },
  "variables": Object {
    "server": Object {
      "name": Object {
        "line": 30,
      },
      "port": Object {
        "line": 31,
      },
    },
  },
}
`;
